# xsd-types

./: Cargo.toml  README.md  README.tpl
.github/workflows/: ci.yml
automata/: name.automaton.cbor  ncname.automaton.cbor  nmtoken.automaton.cbor
src/: decimal.rs  double.rs  float.rs  integer.rs  lexical.rs  lib.rs  types.rs  utils.rs  value.rs
src/lexical/: any_uri.rs  base64_binary.rs  boolean.rs  date.rs  date_time.rs  decimal.rs  double.rs  duration.rs  float.rs  g_day.rs  g_month.rs  g_month_day.rs  g_year.rs  g_year_month.rs  hex_binary.rs  mod.rs  q_name.rs  time.rs
src/lexical/date_time/: date_time_stamp.rs  mod.rs
src/lexical/decimal/: integer.rs  mod.rs
src/lexical/decimal/integer/: non_negative_integer.rs  non_positive_integer.rs
src/lexical/decimal/integer/non_negative_integer/: positive_integer.rs
src/lexical/decimal/integer/non_positive_integer/: negative_integer.rs
src/lexical/duration/: day_time_duration.rs  mod.rs  year_month_duration.rs
src/lexical/string/: id.rs  idref.rs  language.rs  mod.rs  name.rs  ncname.rs  nmtoken.rs  normalized.rs  token.rs
src/value/: any_uri.rs  base64_binary.rs  boolean.rs  date.rs  date_time.rs  decimal.rs  double.rs  duration.rs  float.rs  g_day.rs  g_month.rs  g_month_day.rs  g_year.rs  g_year_month.rs  hex_binary.rs  notation.rs  q_name.rs  string.rs  time.rs
src/value/date_time/: date_time_stamp.rs  mod.rs
src/value/decimal/: integer.rs
src/value/decimal/integer/: non_negative_integer.rs  non_positive_integer.rs
src/value/duration/: day_time_duration.rs  mod.rs  year_month_duration.rs
src/value/string/: id.rs  idref.rs  language.rs  mod.rs  name.rs  ncname.rs  nmtoken.rs  normalized.rs  token.rs
utils/: generate.rb
