[package]
name = "xsd-types"
version = "0.4.6"
edition = "2021"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
description = "Built-in XSD data types."
categories = ["data-structures"]
keywords = ["xsd", "w3c", "datatype"]
repository = "https://github.com/timothee-haudebourg/xsd-types"
documentation = "https://docs.rs/xsd-types"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
pretty_dtoa = "0.3.0"
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2.15"
lazy_static = "1.4.0"
thiserror = "1.0.38"
once_cell = "1.17.0"